--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,22 @@ html {
 
 *, *::before, *::after {
   box-sizing: inherit;
+  margin: 0;
 }
 
-.masthead {
-  background-image: url("../images/logo.svg");
-  background-size: 75px auto;
-  padding: 3.5em;
+.header {
+  background-image: url("../images/logo.svg"), url("../images/logo.svg");
+  background-size: 40px auto;
   background-repeat: no-repeat;
-  background-position: left top;
+  background-position: left center, right center;
   text-align: center;
   font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+}
+
+nav {
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+  text-decoration: none;
+  list-style-type: none;
 }
