--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ html {
   margin: 0;
 }
 
+img {
+  width: 100%;
+}
+
 .header {
   background-image: url("../images/logo.svg"), url("../images/logo.svg"), url("../images/pattern.png");
   background-size: 40px auto;
@@ -40,7 +44,7 @@ nav {
 li {
   display: block;
   text-align: center;
-  padding: 7px 7px;
+  padding: 10px 10px;
   background-color: #998675;
   color: black;
   margin: 0;
@@ -56,20 +60,146 @@ nav ul {
   padding: 0;
   list-style-type: none;
 }
+
+.ground {
+  position: relative;
+  margin-bottom: 0;
+}
+
 .g-image {
   width: 100%;
 }
 
-.ground {
-  position: relative;
-
-}
-
 h2 {
   position: absolute;
+  top: 70%;
+  padding-left: 5%;
   font-family: 'Dosis', sans-serif;
   font-size: 1.5em;
   color: white;
   text-align: center;
-  display: block; 
+  display: inline-block;
+  text-shadow: 0.1em 0.1em 0.2em black;
+}
+
+.top {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0em;
+
+}
+
+.bottom {
+  display: inline-block;
+  position: relative;
+}
+
+
+.beetle-ant {
+  margin: 0;
+  float: left;
+  width: 50%;
+  margin-bottom: 0em;
+  display: block;
+}
+
+.button-ant {
+  color: white;
+  border-radius: 10px;
+  background-color: #8CC63F;
+  padding: .5em 1em;
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+  background-image: linear-gradient(to bottom, #8CC63F, #009245);
+  position: absolute;
+  left: 10%;
+  bottom: 5%;
+}
+
+.button-ant:hover {
+  color: #754C24;
+}
+.beetle-stag {
+  margin: 0;
+  float: right;
+  width: 50%;
+  margin-bottom: 0em;
+  display: block;
+}
+
+.button-stag {
+  color: white;
+  border-radius: 10px;
+  background-color: #8CC63F;
+  padding: .5em 1em;
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+  background-image: linear-gradient(to bottom, #8CC63F, #009245);
+  position: absolute;
+  right: 15%;
+  bottom: 5%;
+}
+
+.button-stag:hover {
+  color: #754C24;
+}
+
+.button-dung {
+  color: white;
+  border-radius: 10px;
+  background-color: #8CC63F;
+  padding: .5em 1em;
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+  background-image: linear-gradient(to bottom, #8CC63F, #009245);
+  position: absolute;
+  left: 15%;
+  bottom: 5%;
+}
+
+.button-dung:hover {
+  color: #754C24;
+}
+
+.beetle-dung {
+  margin: 0;
+  float: left;
+  width: 50%;
+  margin-bottom: 0em;
+  display: block;
+}
+
+.button-tort {
+  color: white;
+  border-radius: 10px;
+  background-color: #8CC63F;
+  padding: .5em 1em;
+  font-family: 'Dosis', sans-serif;
+  font-size: 1.5em;
+  background-image: linear-gradient(to bottom, #8CC63F, #009245);
+  position: absolute;
+  right: 10%;
+  bottom: 5%;
+}
+
+
+.beetle-tort {
+  margin: 0;
+  float: right;
+  width: 50%;
+  margin-bottom: 0em;
+  display: block;
+}
+
+.button-tort:hover {
+  color: #754C24;
+}
+
+footer {
+  background-color: #998675;
+  height: 100px;
+  background-image: url("../images/logo.svg");
+  background-size: 40px auto;
+  background-repeat: no-repeat;
+  background-position: center;
 }
